--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next-auth": "^4.24.13",
     "pg": "^8.16.3",
     "react": "19.2.0",
+    "react-country-flag": "^3.1.0",
     "react-currency-input-field": "^4.0.3",
     "react-datepicker": "^8.10.0",
     "react-day-picker": "^9.11.3",
